--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -14,8 +14,16 @@
 	flex: 0%;
 }
 
-.task .text {
-	color: var(--dark);
+#user-input .text {
+    color: var(--dark);
+	font-size: 1.125rem;
+	width: 60%;
+	display: flexbox;
+	transition: 0.4s;
+}
+
+input.text{
+    color: var(--dark);
 	font-size: 1.125rem;
 	width: 60%;
 	display: flexbox;
