--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -8,17 +8,18 @@
 
 }
 
-* {
-	font-family: "Fira sans", sans-serif;
-}
-
 body {
-	max-width: 600px;
+	background-color: var(--graphite);
+	width: 1000px;
 	margin: auto;
 	color: var(--softWhite);
-	background-image: linear-gradient(0.65turn, var(--graphite), var(--craft));
 	font-size: 20px;
-	flex
+	flex: auto;
+}
+
+h1#title {
+	text-align: center;
+	text-shadow: #C5BAAA;
 }
 
 button {
@@ -27,27 +28,85 @@ button {
 	width: 5em;
 	height: 2em;
 	line-height: 2em;
+	font-size: 15px;
+	font-weight: bold;
 	text-align: center;
-	background: linear-gradient(90deg, 
-		var(--concrete), var(--craft), 
-		var(--graphite));
 	background-size: 300%;
-	border-radius: 30px;
+	border-radius: 2.75px;
 	text-transform: uppercase;
 	cursor: pointer;
 	z-index: 1;
 
 }
 
-button:hover{
-	animation: animation 8s linear infinite;
-	background-color: var(--brightBrick);
+button.edit-btn {
+	background-color: var(--graphite);
+	color: var(--softWhite);
+	border: var(--softWhite) solid .25px;
+	width: 5em;
+	height: 2em;
+	line-height: 2em;
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
 }
 
-input.date {
+button.delete-btn {
+	background-color: var(--brightBrick);
+	color: var(--softWhite);
+	border: var(--brightBrick) solid .25px;
+	width: 5em;
+	height: 2em;
+	line-height: 2em;
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
+}
+
+button#enter-btn {
+	background-color: var(--softWhite);
+	color: var(--graphite);
+	width: 5em;
+	height: 2em;
+	line-height: 2em;
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
+}
+
+
+
+input {
 	border: none;
-	height: 2em;	
-	width: 6.5em;
+	height: 2em;
+	font-size: 15px;
+	font-weight: bold;
+	border-radius: 2.75px;
+	padding: 5px;
+	margin: 5px;
+	text-align: left;
+}
+
+select {
+	border: none;
+	height: 2.65em;
+	font-size: 15px;
+	font-weight: bold;
+	border-radius: 2.75px;
+	padding: 5px;
+	margin: 5px;
+}
+
+input.time {
+	width: 8em;
+}
+
+input.date {	
+	width: 8em;
+}
+
+input.text {
+	width: 30em;
 }
 
 #user-input {
