--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -3,6 +3,7 @@
 	--concrete: #C5BAAA;
 	--craft: #806D61;
 	--brightBrick: #EE7828;
+	--red: #fb2b06;
 	--graphite: #2C2C2C;
 	--darkness: #000000;
 
@@ -60,9 +61,9 @@ button.edit-btn.save-btn {
 }
 
 button.delete-btn {
-	background-color: var(--brightBrick);
+	background-color: var(--red);
 	color: var(--softWhite);
-	border: var(--brightBrick) solid .25px;
+	border: var(--red) solid .25px;
 	width: 5em;
 	height: 2em;
 	line-height: 2em;
@@ -76,7 +77,7 @@ button.complete-btn.complete {
 }
 
 button#enter-btn {
-	background-color: var(--softWhite);
+	background-color: var(#469b21);
 	color: var(--graphite);
 	width: 10em;
 	height: 2.85em;
@@ -87,9 +88,10 @@ button#enter-btn {
 }
 
 button.complete-btn {
-	width: 2.65em;
-	height: 2.65em;
-	text-align: center;
+	width: 1.75em;
+	height: 1.75em;
+	font-size: large;
+	padding: 0;
 }
 
 input.check-box {
