env.DATABSE_URL commited

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-	background-color: var(--craft);
+	background-color: var(--graphite);
 	width: 980px;
 	margin: auto;
 	color: var(--softWhite);
